--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "file-loader": "6.2.0",
     "husky": "8.0.1",
     "jest": "29.4.3",
+    "jiti": "1.21.0",
     "json-schema-to-typescript": "11.0.2",
     "nodemon": "2.0.20",
     "prettier": "2.7.1",
@@ -110,6 +111,7 @@
     "start:example-react": "cd examples/example-react-vite && npm i && npm run start",
     "watch:example-react": "cd examples/example-react-vite && npm run start",
     "prebuild": "npm run test",
+    "pre:publish": "jiti prepublish.ts",
     "start:watch": "nodemon -e js,ts,tsx,css --watch src --exec 'npm run build:pack && npm run watch:example-react'",
     "start": "npm run start:watch && npm run start:example-react",
     "test": "jest",
