--- a/examples/example-react-vite/package.json
+++ b/examples/example-react-vite/package.json
@@ -1,7 +1,7 @@
 {
   "name": "example-react-vite",
   "private": true,
-  "version": "3.8.0",
+  "version": "3.8.1",
   "homepage": "/walletconnect-demo",
   "type": "module",
   "scripts": {
@@ -9,13 +9,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "clean:cache": "rm -rf ./node_modules/.vite",
-    "start": "npm run dev",
+    "start": "npm run clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && npm run dev",
+    "start_old": "npm run dev",
     "start:host": "npm run dev --host"
   },
   "dependencies": {
     "@microlink/react-json-view": "1.22.2",
     "@provenanceio/wallet-utils": "2.8.0",
-    "@provenanceio/walletconnect-js": "file:../..",
+    "@provenanceio/walletconnect-js": "file:../provenanceio-walletconnect-js-3.7.2.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "1.3.0",
