--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "file-loader": "6.2.0",
-    "husky": "8.0.1",
+    "husky": "^9.0.10",
     "jest": "29.4.3",
     "json-schema-to-typescript": "11.0.2",
     "nodemon": "2.0.20",
@@ -115,7 +115,8 @@
     "tsc:esm": "tsc --module es2015 --outDir esm",
     "vup:major": "npm version major --no-git-tag-version && cd examples/example-react-vite && npm version major --no-git-tag-version",
     "vup:minor": "npm version minor --no-git-tag-version && cd examples/example-react-vite && npm version minor --no-git-tag-version",
-    "vup:patch": "npm version patch --no-git-tag-version && cd examples/example-react-vite && npm version patch --no-git-tag-version"
+    "vup:patch": "npm version patch --no-git-tag-version && cd examples/example-react-vite && npm version patch --no-git-tag-version",
+    "prepare": "husky"
   },
   "browserslist": [
     "defaults"
