--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "3.8.2",
+  "version": "3.8.2-develop.1",
   "private": false,
   "sideEffects": false,
   "main": "esm/index.js",
