--- a/examples/example-react-vite/package.json
+++ b/examples/example-react-vite/package.json
@@ -1,7 +1,7 @@
 {
   "name": "example-react-vite",
   "private": true,
-  "version": "3.8.2-develop.2",
+  "version": "3.8.2",
   "homepage": "/walletconnect-demo",
   "type": "module",
   "scripts": {
