--- a/examples/example-react-vite/package.json
+++ b/examples/example-react-vite/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "clean:cache": "rm -rf ./node_modules/.vite",
-    "start": "npm run clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz && npm run dev",
+    "start": "npm run install && npm run dev",
+    "install": "npm run clean:cache && npm i ../provenanceio-walletconnect-js-${npm_package_version}.tgz",
     "start:host": "npm run dev --host"
   },
   "dependencies": {
