--- a/examples/example-react-vite/.gitignore
+++ b/examples/example-react-vite/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore the package-lock.json as it gets generated with the build tests on push
+# This file never gets out in the lib anyway
+package-lock.json
